Styling and removing wrong removal condition

--- a/wp-content/plugins/masterlord-solutions/masterlord-solutions.css
+++ b/wp-content/plugins/masterlord-solutions/masterlord-solutions.css
@@ -1,3 +1,14 @@
+.msl-rent-button, .mls-go-to-cart-btn {
+    width: 100%;
+    display: block;
+    padding: 20px;
+    margin: 0 0 20px;
+}
+
 .msl-rent-button[disabled] {
     opacity: 0.3;
+}
+
+.mls-product-already-in-cart {
+    margin-bottom:0;
 }
