--- a/wp-content/plugins/masterlord-solutions/masterlord-solutions.css
+++ b/wp-content/plugins/masterlord-solutions/masterlord-solutions.css
@@ -18,3 +18,33 @@
     gap: 8px;
     margin-bottom: 20px;
 }
+
+.mls-product-category-item {
+    margin: 0 0 16px;
+}
+
+.mls-product-category-checkbox {
+    -moz-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    border: 1px solid rgba(25, 23, 17, .48);
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 1em;
+    height: 1.5em;
+    margin: 0 0.5em 0 0;
+    min-height: 1.5em;
+    min-width: 1.5em;
+    overflow: hidden;
+    position: static;
+    vertical-align: middle;
+    width: 1.5em;
+}
+
+.mls-product-category-label {
+    cursor: pointer;
+    line-height: 1.5em;
+    font-size: 0.875em;
+    font-weight: 400;
+    vertical-align: middle;
+}
